[package]
name = "backend-dogfight-23"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0"
validator = { version = "0.12", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
redis = "0.23.2"
serde_json = "1"
deadpool-redis = "0.12.0"
